--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,24 +1,11 @@
-<!DOCTYPE html>
-{% extends "base.html" %}
-{%block content%}
+{% extends 'base.html' %}
 
-{% comment %} <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cat Collector</title>
-    </head>
-    <body>
-        <h1>About the Cat Collector</h1>
-    </body>
-</html> {% endcomment %}
+{% block content%}
 
-<h1>About the Cat Collector</h1>
+<h1>About the Cat Collecotr</h1>
 <hr />
 <p class="page-content">
-    I like long romantic walks down the produce aisle. Also, I am currently job
-    seeking!
+    I like long romantic walks down the produce aisle. Also, I am currently job seeking!
 </p>
 
-{%endblock%}
+{% endblock %}
